Fixed Modal height on small screens

--- a/src/styles/scss/base/modal.scss
+++ b/src/styles/scss/base/modal.scss
@@ -17,8 +17,12 @@
     max-width: 800px;
     min-width: 300px;
     z-index: 100999;
-
     animation: slideInFromBottomForm 0.5s ease-out forwards;
+
+    @media (max-height: 800px) {
+      top: 1rem;
+      height: 95%;
+    }
 
     .box {
       box-sizing: border-box;
